prevent overlap

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ header {
 .contact-icon img {
   height: 30px;
   width: 30px;
+  float: left;
 }
 
 .contact {
@@ -37,6 +38,7 @@ header {
   position: relative;
   font-size: 0.8em;
   transform: scale(1, 1.3);
+  float: left;
 }
 
 .email {
